--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -5,8 +5,8 @@
   version = "1.2.0"
 
 [[constraint]]
-  name = "github.com/gorilla/mux"
-  version = "1.1.0"
+  name = "github.com/go-chi/chi"
+  version = "3.3.2"
 
 [[constraint]]
   name = "github.com/pkg/errors"
