go mod 11 dockerfile

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -1,4 +1,6 @@
-FROM golang:1.10.3
+FROM golang:1.11
+
+ENV GO111MODULE=on
 
 ADD . /go/src/github.com/kgoralski/go-crud-template
 WORKDIR /go/src/github.com/kgoralski/go-crud-template
@@ -9,9 +11,7 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN go get -u github.com/golang/dep/cmd/dep && \
-    dep ensure && \
-    go install github.com/kgoralski/go-crud-template
+RUN go install cmd/main.go
 
 ENTRYPOINT scripts/go-app-entrypoint.sh
 
